<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_90sdp"
    android:background="@drawable/bg_rounded_gray"
    android:layout_marginTop="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guidelineEnd"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guidelineStart"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_dummy_name_activity"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        style="@style/TextView.14spBold"
        android:id="@+id/textViewTitleActivity"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        android:paddingHorizontal="@dimen/_10sdp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDurationActivity"
        style="@style/TextView.14spBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/lbl_dummy_duration_activity"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleActivity" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDataTimeActivity"
        style="@style/TextView.10spRegularTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/lbl_dummy_date_time_activity"
        android:textColor="@color/gray_500"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />


</androidx.constraintlayout.widget.ConstraintLayout>